syntax = "proto3";

package proto;

option go_package = "github.com/sifaconer/crud_api/pkg/grpc;proto";


service MedidorServices {
    rpc Create(Medidor) returns (ResponseMedidor) {}
    rpc Update(Medidor) returns (ResponseMedidor) {}
    rpc Delete(UUID) returns (Empty) {}
    rpc All(Empty) returns (ArrayMedidor) {}
    rpc ByID(UUID) returns (ResponseMedidor) {}
    rpc RecentInstallation(Serial) returns (ResponseMedidor) {}
	rpc Inactive(Empty) returns (ArrayMedidor) {} 
}

message Empty {}

message UUID {
    string id = 1;
}

message Serial {
    string serial = 1;
}

message Medidor {
    string id = 1;
    string brand = 2;
    string address = 3;
    int64 unix_installation_date = 4; 
    optional int64 unix_retirement_date = 5; 
    string serial = 6;
    uint32 lines = 7;
    bool is_active = 8; 
}

message ResponseMedidor {
    string id = 1;
    string brand = 2;
    string address = 3;
    int64 unix_installation_date = 4; 
    optional int64 unix_retirement_date = 5; 
    string serial = 6;
    uint32 lines = 7;
    bool is_active = 8;
    int64 unix_created_at = 9; 
}

message ArrayMedidor {
    repeated ResponseMedidor Medidor = 1;
}